final update and code cleaning

--- a/public/bad.html
+++ b/public/bad.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesheet2.css">
+    <link rel="stylesheet" href="css/stylesheet2.css">
     <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
     <title> Travel Buddy </title>
   </head>
@@ -12,13 +12,13 @@
         <div class= "logo">
           <div style="background-color:orange;height:5%;"></div>
           <div id= "logo_inside">
-              <img src="Travel Buddy.PNG">
+              <img src="images/Travel Buddy.PNG">
           </div>
         </div>
         <div class="sidebar_container">
           <div class="profile">
             <div class="profile_photo">
-              <img src="Profile Photo.png">
+              <img src="images/Profile Photo.png">
             </div>
             <div class="profile_details">
               <h1 id="heading1">Brian</h1>
@@ -27,11 +27,11 @@
           </div>
           <div class = "buddy_container">
             <div class="buddy_type">
-              <img src="picture1.svg" class="icon">
+              <img src="images/picture1.svg" class="icon">
               <p>Journey Buddy</p>
             </div>
             <div class="buddy_type">
-              <img src="picture1.svg" class="icon">
+              <img src="images/picture1.svg" class="icon">
               <p>Destination Buddy</p>
             </div>
           </div>
@@ -49,14 +49,14 @@
              <a class="button" id="button_4" type="button" name="Blog"><span>Blog</span></a>
            </div>
            <div>
-             <a class="button" id="button_5" type="button" name="Settings">
+             <a href= "searching_for.html" class="button" id="button_5" type="button" name="Settings">
                <span> Settings </span></a>
            </div>
           </div>
         <div class="sign_out_container"style = "margin-top: 5%;" >
            <div class="back-to-exp-link">
              <span>Back to</span>
-             <img src="Picture 1.png" />
+             <img src="images/Picture 1.png" />
 
              <a href="https://expedia.co.uk" target="_blank"></a>
            </div>
@@ -66,7 +66,7 @@
       <div class= "main_container">
           <div id="profile_container" style="border-radius: 10px;">
               <div id="profile" style="margin:10%;padding:0;border: 4px solid grey; border-radius: 10px;">
-                <img src="random photo.jpg">
+                <img src="images/random photo.jpg">
               </div>
               <div id="profile_info" style="margin:7%;">
                   <br>
@@ -110,10 +110,10 @@
                   <br>
         <div class="like_dislike" style="display: flex;height:10%;margin:0 5%;">
           <div class="like" style="background-color:green;flex:1;display:flex;justify-content:center;padding:3%;border-right:2px dashed white;">
-            <a href="mikey2.html"> <img src="Thumb_Down.svg" style="width:50px;"></a>
+            <a href="mikey2.html"> <img src="images/Thumb_Down.svg" style="width:50px;"></a>
           </div>
           <div class="dislike" style="background-color:red;flex:1;display:flex;justify-content:center;padding:3%;">
-            <img src="Thumb_Down.svg" href="mikey.html" style="transform: rotate(180deg);">
+            <img src="images/Thumb_Down.svg" href="mikey.html" style="transform: rotate(180deg);">
           </div>
         </div>
       </div>
