--- a/public/mikey2.html
+++ b/public/mikey2.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesheet2.css">
+    <link rel="stylesheet" href="css/stylesheet2.css">
     <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
     <title> Travel Buddy </title>
   </head>
@@ -12,13 +12,13 @@
         <div class= "logo">
           <div style="background-color:orange;height:5%;"></div>
           <div id= "logo_inside">
-              <img src="Travel Buddy.PNG">
+              <img src="images/Travel Buddy.PNG">
           </div>
         </div>
         <div class="sidebar_container">
           <div class="profile">
             <div class="profile_photo">
-              <img src="Profile Photo.png">
+              <img src="images/Profile Photo.png">
             </div>
             <div class="profile_details">
               <h1 id="heading1">Brian</h1>
@@ -27,11 +27,11 @@
           </div>
           <div class = "buddy_container">
             <div class="buddy_type">
-              <img src="picture1.svg" class="icon">
+              <img src="images/picture1.svg" class="icon">
               <p>Journey Buddy</p>
             </div>
             <div class="buddy_type">
-              <img src="picture1.svg" class="icon">
+              <img src="images/picture1.svg" class="icon">
               <p>Destination Buddy</p>
             </div>
           </div>
@@ -49,14 +49,14 @@
               <a class="button" id="button_4" type="button" name="Blog"><span>Blog</span></a>
             </div>
             <div>
-              <a class="button" id="button_5" type="button" name="Settings">
+              <a href= "searching_for.html" class="button" id="button_5" type="button" name="Settings">
                 <span> Settings </span></a>
             </div>
         </div>
         <div class="sign_out_container"style = "margin-top: 5%;" >
            <div class="back-to-exp-link">
              <span>Back to</span>
-             <img src="Picture 1.png" />
+             <img src="images/Picture 1.png" />
 
              <a href="https://expedia.co.uk" target="_blank"></a>
            </div>
@@ -67,9 +67,9 @@
         <div class = "bubble">
         <h1 id="match_msg">It’s a match!</h1>
         <div class = "match">
-          <img src="tiltedbri.png" class ="brie">
-          <img src = "plane.png" class ="plane">
-          <img src="random photo.jpg" class ="Mikey">
+          <img src="images/tiltedbri.png" class ="brie">
+          <img src = "images/plane.png" class ="plane">
+          <img src="images/random photo.jpg" class ="Mikey">
         </div>
 
       <div class="bio">
@@ -79,10 +79,10 @@
 </div>
           <div class="like_dislike" style="display: flex;height:10%;margin:0 5%;">
             <div class="like" style="background-color:green;flex:1;display:flex;justify-content:center;padding:3%;border-right:2px dashed white;">
-              <img src="Thumb_Down.svg" style="">
+              <img src="images/Thumb_Down.svg" style="">
             </div>
             <div class="dislike" style="background-color:red;flex:1;display:flex;justify-content:center;padding:3%;">
-              <img src="Thumb_Up.svg" style="transform: rotate(180deg);">
+              <img src="images/Thumb_Up.svg" style="transform: rotate(180deg);">
             </div>
           </div>
           <h1 id="match_msg">By agreeing to a match you will share contact info and  will be redirected to ways of contacting your buddy. </h1>
