--- a/public/searching_for.html
+++ b/public/searching_for.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesheet2.css">
+    <link rel="stylesheet" href="css/stylesheet2.css">
     <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
     <title> Travel Buddy </title>
   </head>
@@ -12,13 +12,13 @@
         <div class= "logo">
           <div style="background-color:orange;height:5%;"></div>
           <div id= "logo_inside">
-              <img src="Travel Buddy.PNG">
+              <img src="images/Travel Buddy.PNG">
           </div>
         </div>
         <div class="sidebar_container">
           <div class="profile">
             <div class="profile_photo">
-              <img src="Profile Photo.png">
+              <img src="images/Profile Photo.png">
             </div>
             <div class="profile_details">
               <h1 id="heading1">Brian</h1>
@@ -27,11 +27,11 @@
           </div>
           <div class = "buddy_container">
             <div class="buddy_type">
-              <img src="picture1.svg" class="icon">
+              <img src="images/picture1.svg" class="icon">
               <p>Journey Buddy</p>
             </div>
             <div class="buddy_type">
-              <img src="picture1.svg" class="icon">
+              <img src="images/picture1.svg" class="icon">
               <p>Destination Buddy</p>
             </div>
           </div>
@@ -56,7 +56,7 @@
         <div class="sign_out_container"style = "margin-top: 5%;" >
            <div class="back-to-exp-link">
              <span>Back to</span>
-             <img src="Picture 1.png" />
+             <img src="images/Picture 1.png" />
 
              <a href="https://expedia.co.uk" target="_blank"></a>
            </div>
